<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vishal.vishalsinghmcedtu.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.vishal.vishalsinghmcedtu.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_play"
        android:name="com.vishal.vishalsinghmcedtu.ui.Play"
        android:label="@string/menu_play"
        tools:layout="@layout/play_fragment"/>

    <fragment
        android:id="@+id/nav_share"
        android:label="@string/menu_share"
        />

    <fragment
        android:id="@+id/nav_linkedIn"
        android:label="@string/menu_linkedIn"
        />

    <fragment
        android:id="@+id/nav_twitter"
        android:label="@string/menu_twitter"
        />
    <fragment
        android:id="@+id/nav_facebook"
        android:label="@string/menu_facebook"
        />
    <fragment
        android:id="@+id/nav_gmail"
        android:label="@string/menu_gamil"
        />
    <fragment
        android:id="@+id/nav_youtube"
        android:label="@string/menu_youtube"
        />

</navigation>